--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aliexpress</groupId>
-    <artifactId>Aliexpress</artifactId>
+    <artifactId>Aliexpress_E2E</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
